force-app/main/default/objects/ListViewSettings__mdt/ListViewSettings__mdt.object-meta.xml
<CustomObject>
    <label>ListViewSetting</label>
    <pluralLabel>ListViewSetting</pluralLabel>
</CustomObject>