force-app/main/default/objects/ListViewSettings__mdt/fields/Filter__c.field-meta.xml
<CustomField>
    <fullName>Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filter</label>
    <type>Checkbox</type>
</CustomField>