force-app/main/default/objects/ListViewSettings__mdt/fields/List_of_Fields__c.field-meta.xml
<CustomField>
    <fullName>List_of_Fields__c</fullName>
    <label>List of Fields</label>
    <length>50</length>
    <type>Text</type>
</CustomField>