force-app/main/default/objects/ListViewSettings__mdt/fields/ListOfLabels__c.field-meta.xml
<CustomField>
    <fullName>ListOfLabels__c</fullName>
    <label>ListOfLabels</label>
    <length>50</length>
    <type>Text</type>
</CustomField>