force-app/main/default/objects/ListViewSettings__mdt/fields/sWhere__c.field-meta.xml
<CustomField>
    <fullName>sWhere__c</fullName>
    <label>sWhere</label>
    <length>50</length>
    <type>Text</type>
</CustomField>